--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,24 @@
-<po-page-default class="po-text-center" p-title="Home">
-  <p>home</p>
+<po-page-default class="po-text-center" p-title="Bem vinde à Pokedex em PO-UI ! ">
+  <div class="po-row">
+    <img class="po-offset-lg-5 po-offset-xl-5 po-offset-md-5 po-offset-sm-5
+    po-xl-2 po-lg-2 po-md-2 po-sm-2 po-mb-3 po-pb-1"
+      src="../assets/pokemon.png" alt=""
+    >
+  </div>
+  <div class="po-row ">
+    <p class="po-font-subtitle po-text-center po-xl-12 po-lg-12 po-mb-1 po-pb-1 text-color">
+      Utilize os recursos no menu lateral.
+    </p>
+  </div>
+  <div class="po-row">
+    <img class="po-offset-lg-2 po-offset-xl-2 po-xl-8 po-lg-8 po-mb-1 po-pb-1"
+      src="../assets/giphy12.gif" alt=""
+    >
+  </div>
+  <div class="po-row ">
+    <p class="po-font-subtitle po-text-center po-xl-12 po-lg-12 po-mb-1 po-pb-1 text-color">
+      Vamos Lá !
+    </p>
+  </div>
 </po-page-default>
 
