--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -2,11 +2,12 @@
 <po-page-default class="po-text-center" p-title="Lista Pokedex - Table">
   <po-table
   [p-auto-collapse]="true"
-
   [p-hide-columns-manager]="true"
   [p-items]="pokemons"
   [p-sort]="true"
   [p-striped]="true"
+  [p-hide-columns-manager]="false"
+  [p-actions]="actions"
   >
   </po-table>
 </po-page-default>
