--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,89 @@
 #element::-webkit-scrollbar {
   display: none;
 }
+
+.sample-menu-header-text-color {
+  color: #9da7a9;
+}
+
+.Grass {
+  background-color: #9bcc50;
+  color: #212121;
+}
+
+.Poison{
+  background-color: #b97fc9;
+  color: #fff;
+}
+
+.Fire{
+  background-color: #fd7d24;
+  color: #212121;
+}
+
+.Water {
+  background-color: #4592c4;
+  color: #fff;
+}
+
+.Flying {
+  background: linear-gradient(    180deg, #3dc7ef 50%, #bdb9b8 50%);
+  background-color: #3dc7ef;
+  color: #212121;
+}
+
+.Bug{
+  background-color: #729f3f;
+  color: #fff;
+}
+
+.Normal{
+  background-color: #a4acaf;
+  color: #212121;
+}
+
+.Electric{
+  background-color: #eed535;
+  color: #212121;
+}
+
+.Ground{
+  background: linear-gradient( 180deg, #f7de3f 50%, #ab9842 50%);
+  background-color: #f7de3f;
+  color: #212121;
+}
+.Fighting{
+  background-color: #d56723;
+  color: #fff;
+}
+
+.Psychic{
+  background-color: #f366b9;
+  color: #fff;
+}
+
+.Rock{
+  background-color: #a38c21;
+  color: #fff;
+}
+
+.Steel{
+  background-color: #9eb7b8;
+  color: #212121;
+}
+
+.Ice{
+  background-color: #51c4e7;
+  color: #212121;
+}
+
+.Ghost{
+  background-color: #7b62a3;
+  color: #fff;
+}
+
+.Dragon {
+  background: linear-gradient(  180deg, #53a4cf 50%, #f16e57 50%);
+  background-color: #53a4cf;
+  color: #fff;
+}
